[gd_scene load_steps=23 format=2]

[ext_resource path="res://Src/Levels/Level16.gd" type="Script" id=1]
[ext_resource path="res://Src/Train/Train.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/Skybox/NewSkyboxVelocity.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Train/SignMotion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Train/WagonOil.png" type="Texture" id=5]
[ext_resource path="res://Assets/Train/TrainWagon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Train/TrainCargo.png" type="Texture" id=7]
[ext_resource path="res://Src/Objects/Note.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Train/TrainArms.png" type="Texture" id=9]
[ext_resource path="res://Assets/Train/TrainTrain.png" type="Texture" id=10]
[ext_resource path="res://Src/Button/ButtonLever.tscn" type="PackedScene" id=11]
[ext_resource path="res://Src/ThinArea/ThinArea.tscn" type="PackedScene" id=12]
[ext_resource path="res://Src/Player/Player.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Tileset/WallTileset.tres" type="TileSet" id=17]
[ext_resource path="res://Assets/Tileset/RoomsTileset.tres" type="TileSet" id=21]
[ext_resource path="res://Src/ExtractionZone/ExtractionZone.tscn" type="PackedScene" id=46]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 128, 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 104, 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 4 )

[sub_resource type="Animation" id=3]
resource_name = "decouple"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -300, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Train/LeftBlocker:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "playBombSound"
} ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 32 )

[node name="Level16" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Affaire 2: Your boss wants you to infiltrate the affaires house, taser him and bring the body to the car."
}

[node name="NewSkyboxVelocity" parent="." instance=ExtResource( 3 )]
speed = 0.4

[node name="Ground" type="Node2D" parent="."]
position = Vector2( 704, 256 )

[node name="SpriteWalls" type="Node2D" parent="."]

[node name="BackgroundDecorations" type="Node2D" parent="."]

[node name="BgWalls" type="TileMap" parent="."]
tile_set = ExtResource( 17 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 32
occluder_light_mask = 3
format = 1

[node name="Rooms" type="TileMap" parent="."]
light_mask = 3
tile_set = ExtResource( 21 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 32
occluder_light_mask = 3
format = 1

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 17 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 32
occluder_light_mask = 3
format = 1

[node name="LevelObjects" type="Node2D" parent="."]

[node name="Decorations" type="Node2D" parent="LevelObjects"]

[node name="Objects" type="Node2D" parent="LevelObjects"]

[node name="SignMotion" parent="LevelObjects/Objects" instance=ExtResource( 4 )]
amount = 4

[node name="PositionStart" type="Position2D" parent="LevelObjects/Objects/SignMotion"]
position = Vector2( 1984, 256 )

[node name="PositionStop" type="Position2D" parent="LevelObjects/Objects/SignMotion"]
position = Vector2( -54, 256 )

[node name="Trains" type="Node2D" parent="LevelObjects/Objects"]

[node name="Wagons" type="Node2D" parent="LevelObjects/Objects/Trains"]

[node name="Wagon" parent="LevelObjects/Objects/Trains/Wagons" instance=ExtResource( 2 )]
position = Vector2( 176, 256 )

[node name="Sprite" type="Sprite" parent="LevelObjects/Objects/Trains/Wagons/Wagon"]
position = Vector2( 16, -72 )
texture = ExtResource( 6 )
centered = false

[node name="Roof" type="StaticBody2D" parent="LevelObjects/Objects/Trains/Wagons/Wagon"]
position = Vector2( 144, -72 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelObjects/Objects/Trains/Wagons/Wagon/Roof"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="Wagon2" parent="LevelObjects/Objects/Trains/Wagons" instance=ExtResource( 2 )]
position = Vector2( 464, 256 )

[node name="Sprite2" type="Sprite" parent="LevelObjects/Objects/Trains/Wagons/Wagon2"]
position = Vector2( 8, -72 )
texture = ExtResource( 7 )
centered = false

[node name="Note" parent="LevelObjects/Objects/Trains/Wagons/Wagon2" instance=ExtResource( 8 )]
position = Vector2( 140, -30 )
text = "Danger! Explosive!"
highlight = true
type = 1

[node name="Wagon3" parent="LevelObjects/Objects/Trains/Wagons" instance=ExtResource( 2 )]
position = Vector2( 752, 256 )

[node name="Sprite" type="Sprite" parent="LevelObjects/Objects/Trains/Wagons/Wagon3"]
position = Vector2( 8, -88 )
texture = ExtResource( 5 )
centered = false

[node name="Wagon4" parent="LevelObjects/Objects/Trains/Wagons" instance=ExtResource( 2 )]
position = Vector2( 1040, 256 )

[node name="Sprite2" type="Sprite" parent="LevelObjects/Objects/Trains/Wagons/Wagon4"]
position = Vector2( 16, -72 )
texture = ExtResource( 6 )
centered = false

[node name="Roof2" type="StaticBody2D" parent="LevelObjects/Objects/Trains/Wagons/Wagon4"]
position = Vector2( 144, -72 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelObjects/Objects/Trains/Wagons/Wagon4/Roof2"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="Wagon5" parent="LevelObjects/Objects/Trains/Wagons" instance=ExtResource( 2 )]
position = Vector2( 1328, 256 )

[node name="Sprite3" type="Sprite" parent="LevelObjects/Objects/Trains/Wagons/Wagon5"]
position = Vector2( 16, -72 )
texture = ExtResource( 9 )
centered = false

[node name="Roof3" type="StaticBody2D" parent="LevelObjects/Objects/Trains/Wagons/Wagon5"]
position = Vector2( 120, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelObjects/Objects/Trains/Wagons/Wagon5/Roof3"]
position = Vector2( 0, -4 )
shape = SubResource( 5 )

[node name="Roof4" type="StaticBody2D" parent="LevelObjects/Objects/Trains/Wagons/Wagon5"]
position = Vector2( 260, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelObjects/Objects/Trains/Wagons/Wagon5/Roof4"]
position = Vector2( 0, -4 )
shape = SubResource( 6 )

[node name="ThinArea" parent="LevelObjects/Objects/Trains/Wagons/Wagon5" instance=ExtResource( 12 )]
position = Vector2( 224, -64 )
reduced_down = 2
width = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelObjects/Objects/Trains/Wagons"]
anims/decouple = SubResource( 3 )

[node name="Train" parent="LevelObjects/Objects/Trains" instance=ExtResource( 2 )]
position = Vector2( 1616, 256 )

[node name="Sprite4" type="Sprite" parent="LevelObjects/Objects/Trains/Train"]
position = Vector2( 0, -80 )
texture = ExtResource( 10 )
centered = false

[node name="ButtonLever" parent="LevelObjects/Objects/Trains/Train" instance=ExtResource( 11 )]
position = Vector2( 106, -39 )
unlocks = [ NodePath("../../../../..") ]

[node name="RightBlocker" type="StaticBody2D" parent="LevelObjects/Objects/Trains/Train"]
position = Vector2( 224, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelObjects/Objects/Trains/Train/RightBlocker"]
shape = SubResource( 1 )

[node name="LeftBlocker" type="StaticBody2D" parent="LevelObjects/Objects/Trains/Train"]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelObjects/Objects/Trains/Train/LeftBlocker"]
shape = SubResource( 1 )

[node name="Doors" type="Node2D" parent="LevelObjects"]

[node name="Staircases" type="Node2D" parent="LevelObjects"]

[node name="Cameras" type="Node2D" parent="LevelObjects"]
position = Vector2( 8, 0 )

[node name="Lights" type="Node2D" parent="LevelObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="ExtractionZone" parent="LevelObjects" instance=ExtResource( 46 )]
position = Vector2( 1600, -48 )
next_boss_interacted_counter = 6
nextSecretaryInteractionCounter = 6

[node name="Signs" type="Node2D" parent="LevelObjects"]

[node name="Player" parent="." instance=ExtResource( 14 )]
position = Vector2( 1504, 176 )
z_index = 50

[node name="MinigameHolder" type="CanvasLayer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 165, 224 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="NPCS" type="Node2D" parent="."]

[node name="Foreground" type="Node2D" parent="."]
z_index = 51
[connection signal="animation_finished" from="LevelObjects/Objects/Trains/Wagons/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
